# ansi2html

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  ansi2html-convert  ansi2html.py  ansi2html.sh  ansi2html.spec  apidocs.sh  codecov.yml  mkdocs.yml  mypy.ini  pylint.output  pyproject.toml  python-ansi2html.spec  readthedocs.yml  setup.cfg  setup.py  tox.ini  ugly-uninstall.sh
.github/: FUNDING.yml
.github/workflows/: ack.yml  release.yml  tox.yml
ansi2html/: __init__.py  ansi2html.py  ansi2html.sh  converter.py  style.py  util.py  version.py
ansi2html/templates/: body.html  default.html  full.mak  header.html  header.mak
docs/: Makefile  api.md  changelog.md
docs/source/: api.rst  changelog.rst  conf.py  index.rst
man/: .gitignore  ansi2html.1.txt
scripts/: ansi2html-convert
src/ansi2html/: __init__.py  converter.py  style.py
tests/: ansicolor  ansicolor.html  ansicolor_eix.html  ansicolor_eix.txt  produce_headers.txt  test_ansi2html.py
