[metadata]
name = ansi2html
url = https://github.com/pycontribs/ansi2html
project_urls =
    Bug Tracker = https://github.com/pycontribs/ansi2html/issues
    Release Management = https://github.com/pycontribs/ansi2html/releases
    CI = https://github.com/pycontribs/ansi2html/actions
    Source Code = https://github.com/pycontribs/ansi2html
long_description = file: README.rst
long_description_content_type = text/x-rst
author = 'Ralph Bean'
author_email = 'rbean@redhat.com'
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Text Processing
    Topic :: Text Processing :: Markup
    Topic :: Text Processing :: Markup :: HTML

[bdist_rpm]
requires = python >= 3.6

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

[options.packages.find]
where = .
